# docs/swagger.json
@@ -5,13 +5,183 @@
     "swagger": "2.0",
     "info": {
         "description": "Prometheus hub, distrubed prometheus targent manager.",
-        "title": "Prometheus Hub API",
+        "title": "Pantheon server",
         "contact": {},
-        "version": "0.0.9"
+        "version": "v0.0.0-dev"
     },
-    "host": "localhost:8899",
     "basePath": "/",
     "paths": {
+        "/ph/v1/monitors": {
+            "get": {
+                "description": "Get all active monitor rules",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "monitor"
+                ],
+                "summary": "List monitor rules",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_model.MonitorRule"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Add a new monitor rule",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "monitor"
+                ],
+                "summary": "Create monitor rule",
+                "parameters": [
+                    {
+                        "description": "Monitor Rule configuration",
+                        "name": "rule",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_monitor.MonitorRuleReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/ph/v1/monitors/{id}": {
+            "post": {
+                "description": "Modify an existing monitor rule",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "monitor"
+                ],
+                "summary": "Update monitor rule",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Monitor Rule ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Monitor Rule configuration",
+                        "name": "rule",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_monitor.MonitorRuleReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Remove a monitor rule by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "monitor"
+                ],
+                "summary": "Delete monitor rule",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Monitor Rule ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/ph/v1/proxy": {
             "get": {
                 "description": "This endpoint proxies requests to another server.",
@@ -123,7 +293,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_query.QueryEditSelector"
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.QueryEditSelector"
                         }
                     }
                 ],
@@ -131,13 +301,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_query.Response"
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_query.Response"
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_query.Response"
                         }
                     }
                 }
@@ -162,38 +332,7 @@
                         "name": "query",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_target.Target"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Create prometheus target.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Targets"
-                ],
-                "summary": "Create prometheus target.",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "query",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_target.Target"
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_target.Target"
                         }
                     }
                 ],
@@ -266,35 +405,6 @@
                 }
             }
         },
-        "/ph/v1/targets/name/{name}": {
-            "delete": {
-                "description": "Remove prometheus target with name.",
-                "consumes": [
-                    "application/x-www-form-urlencoded"
-                ],
-                "tags": [
-                    "Targets"
-                ],
-                "summary": "Remove prometheus target with name.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "target name",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            }
-        },
         "/ph/v1/targets/selector/{key}/{value}": {
             "get": {
                 "description": "List target with instance labels",
@@ -320,33 +430,6 @@
                         "type": "string",
                         "description": "selector value name",
                         "name": "value",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Remove target instance with name.",
-                "consumes": [
-                    "application/x-www-form-urlencoded"
-                ],
-                "tags": [
-                    "Targets"
-                ],
-                "summary": "Remove prometheus target with name.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "target name",
-                        "name": "name",
                         "in": "path",
                         "required": true
                     }
@@ -415,7 +498,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_target.TargetChg"
+                            "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_target.TargetChg"
                         }
                     }
                 ],
@@ -497,7 +580,7 @@
         }
     },
     "definitions": {
-        "github_com_cylonchau_pantheon_pkg_apis_meta_v1.TypeMeta": {
+        "github_com_cylonchau_pantheon_pkg_api_meta_v1.TypeMeta": {
             "type": "object",
             "properties": {
                 "kind": {
@@ -505,7 +588,50 @@
                 }
             }
         },
-        "github_com_cylonchau_pantheon_pkg_apis_query.QueryEditSelector": {
+        "github_com_cylonchau_pantheon_pkg_api_monitor.MonitorRuleReq": {
+            "type": "object",
+            "required": [
+                "name",
+                "namespace",
+                "port_name",
+                "selector",
+                "type"
+            ],
+            "properties": {
+                "drop_metrics": {
+                    "description": "Optional regex to drop metrics",
+                    "type": "string"
+                },
+                "labels": {
+                    "description": "Comma-separated: env=prod,owner=sre (optional)",
+                    "type": "string"
+                },
+                "metric_path": {
+                    "description": "e.g. /metrics (optional, defaults to /metrics)",
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "namespace": {
+                    "type": "string"
+                },
+                "port_name": {
+                    "type": "string"
+                },
+                "selector": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string",
+                    "enum": [
+                        "pod",
+                        "service"
+                    ]
+                }
+            }
+        },
+        "github_com_cylonchau_pantheon_pkg_api_query.QueryEditSelector": {
             "type": "object",
             "required": [
                 "new_key",
@@ -532,7 +658,7 @@
                 }
             }
         },
-        "github_com_cylonchau_pantheon_pkg_apis_query.Response": {
+        "github_com_cylonchau_pantheon_pkg_api_query.Response": {
             "type": "object",
             "properties": {
                 "code": {
@@ -544,14 +670,20 @@
                 }
             }
         },
-        "github_com_cylonchau_pantheon_pkg_apis_target.Target": {
+        "github_com_cylonchau_pantheon_pkg_api_target.Target": {
             "type": "object",
             "required": [
                 "selectors"
             ],
             "properties": {
+                "addresses": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "kind": {
-                    "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_meta_v1.TypeMeta"
+                    "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_meta_v1.TypeMeta"
                 },
                 "selectors": {
                     "type": "object",
@@ -562,12 +694,12 @@
                 "targets": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_target.TargetItem"
+                        "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_target.TargetItem"
                     }
                 }
             }
         },
-        "github_com_cylonchau_pantheon_pkg_apis_target.TargetAuth": {
+        "github_com_cylonchau_pantheon_pkg_api_target.TargetAuth": {
             "type": "object",
             "properties": {
                 "base": {
@@ -578,14 +710,14 @@
                 }
             }
         },
-        "github_com_cylonchau_pantheon_pkg_apis_target.TargetChg": {
+        "github_com_cylonchau_pantheon_pkg_api_target.TargetChg": {
             "type": "object",
             "properties": {
                 "address": {
                     "type": "string"
                 },
                 "auth": {
-                    "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_target.TargetAuth"
+                    "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_target.TargetAuth"
                 },
                 "metric_path": {
                     "type": "string"
@@ -598,7 +730,7 @@
                 }
             }
         },
-        "github_com_cylonchau_pantheon_pkg_apis_target.TargetItem": {
+        "github_com_cylonchau_pantheon_pkg_api_target.TargetItem": {
             "type": "object",
             "required": [
                 "address"
@@ -608,7 +740,7 @@
                     "type": "string"
                 },
                 "auth": {
-                    "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_apis_target.TargetAuth"
+                    "$ref": "#/definitions/github_com_cylonchau_pantheon_pkg_api_target.TargetAuth"
                 },
                 "labels": {
                     "type": "object",
@@ -630,6 +762,45 @@
                 },
                 "scrape_timeout": {
                     "type": "integer"
+                }
+            }
+        },
+        "github_com_cylonchau_pantheon_pkg_model.MonitorRule": {
+            "type": "object",
+            "properties": {
+                "drop_metrics": {
+                    "description": "Regex to drop metrics",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "labels": {
+                    "description": "Labels to inject: k1=v1,k2=v2",
+                    "type": "string"
+                },
+                "metric_path": {
+                    "description": "e.g. /metrics",
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "namespace": {
+                    "description": "K8s namespace",
+                    "type": "string"
+                },
+                "port_name": {
+                    "description": "Target port name or port number",
+                    "type": "string"
+                },
+                "selector": {
+                    "description": "Comma-separated app=portal,env=prod",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "\"pod\" or \"service\"",
+                    "type": "string"
                 }
             }
         },
